chore: 更新文件权限并添加新文档
将多个文件的权限从644更改为755，删除.DS_Store文件，并添加新的实验报告和项目文档。

--- a/项目任务清单.md
+++ b/项目任务清单.md
@@ -1,14 +1,59 @@
 # 项目任务清单
 
 ## 前端开发任务
-- [x] SymPy绘图
-- [x] 正负电荷的电势与电场计算与可视化
-- [x] pandas简单应用：读行星列表，生成一个符合要求的表格
-- [x] 图像处理：卷积，理解卷积的概念，理解点扩散函数
-- [x] 特征强调：python物理建模初学者指南第8章
+
+### 二次曲线求根公式
+- [ ] 准备项目说明文档 (docs/)
+- [ ] 准备Python参考答案 (solutions/)
+- [ ] 准备测试代码 (tests/)
+- [ ] 准备学生代码模板 (src/)
+- [ ] 准备实验报告模板 (reports/)
+- [ ] 参考答案通过测试
+
+### 计算微分
+- [ ] 准备项目说明文档 (docs/)
+- [ ] 准备Python参考答案 (solutions/)
+- [ ] 准备测试代码 (tests/)
+- [ ] 准备学生代码模板 (src/)
+- [ ] 准备实验报告模板 (reports/)
+- [ ] 参考答案通过测试
+
+### 计算积分
+- [ ] 准备项目说明文档 (docs/)
+- [ ] 准备Python参考答案 (solutions/)
+- [ ] 准备测试代码 (tests/)
+- [ ] 准备学生代码模板 (src/)
+- [ ] 准备实验报告模板 (reports/)
+- [ ] 参考答案通过测试
+
+### 序列求和-大数吃掉小数
+- [ ] 准备项目说明文档 (docs/)
+- [ ] 准备Python参考答案 (solutions/)
+- [ ] 准备测试代码 (tests/)
+- [ ] 准备学生代码模板 (src/)
+- [ ] 准备实验报告模板 (reports/)
+- [ ] 参考答案通过测试
+
+### 序列求和-相近的数相减
+- [ ] 准备项目说明文档 (docs/)
+- [ ] 准备Python参考答案 (solutions/)
+- [ ] 准备测试代码 (tests/)
+- [ ] 准备学生代码模板 (src/)
+- [ ] 准备实验报告模板 (reports/)
+- [ ] 参考答案通过测试
+
+### 球面贝塞尔函数的误差
+- [ ] 准备项目说明文档 (docs/)
+- [ ] 准备Python参考答案 (solutions/)
+- [ ] 准备测试代码 (tests/)
+- [ ] 准备学生代码模板 (src/)
+- [ ] 准备实验报告模板 (reports/)
+- [ ] 参考答案通过测试
+
+### 修改README.md
+- [ ] 修改README.md：可以用ls命令查看所有的项目，之后让AI更新
 
 ## 后端开发任务
-- [x] 修改README.md
-- [x] 修改requirements.txt
-- [x] 更新.github/classroom/autograding.py文件
+- [ ] 修改requirements.txt：加入必要的程序库
+- [ ] 更新.github/classroom/autograding.py文件
 
